// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DualListBox component testing DualListBox 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh iJcWMs"
  >
    <ul
      class="sc-jsEeTM hQaZnA"
    />
    <hr
      class="sc-fLseNd dUhxpB"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-blmEgr dnjMBb"
    >
      <div
        class="sc-ifyrAs fdWRu"
      >
        <p
          align="left"
          class="sc-fHejqy jScsaH"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-fHejqy hzmlXz"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            0 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-dJGMql"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox candidateItems 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh iJcWMs"
  >
    <ul
      class="sc-jsEeTM hQaZnA"
    >
      <li
        class="sc-kFCroH sc-irLvIq bEWmyC dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                foo
              </p>
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kFCroH sc-irLvIq bEWmyC dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                bar
              </p>
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kFCroH sc-irLvIq bEWmyC dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                hoge
              </p>
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kFCroH sc-irLvIq dMFoFL dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                fuga
              </p>
            </span>
          </label>
        </div>
      </li>
    </ul>
    <hr
      class="sc-fLseNd dUhxpB"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-blmEgr dnjMBb"
    >
      <div
        class="sc-ifyrAs fdWRu"
      >
        <p
          align="left"
          class="sc-fHejqy jScsaH"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-fHejqy hzmlXz"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            0 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-dJGMql"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox candidateItems and selectedItems 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh iJcWMs"
  >
    <ul
      class="sc-jsEeTM hQaZnA"
    >
      <li
        class="sc-kFCroH sc-irLvIq bEWmyC dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              checked=""
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                foo
              </p>
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kFCroH sc-irLvIq bEWmyC dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              checked=""
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                bar
              </p>
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kFCroH sc-irLvIq bEWmyC dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              checked=""
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                hoge
              </p>
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kFCroH sc-irLvIq dMFoFL dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              checked=""
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                fuga
              </p>
            </span>
          </label>
        </div>
      </li>
    </ul>
    <hr
      class="sc-fLseNd dUhxpB"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-blmEgr dnjMBb"
    >
      <div
        class="sc-ifyrAs fdWRu"
      >
        <p
          align="left"
          class="sc-fHejqy jScsaH"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-fHejqy hzmlXz"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            4 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-dJGMql"
      >
        <li
          class="sc-hIPBNq jPSKrv"
        >
          foo
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-hIPBNq jPSKrv"
        >
          bar
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-hIPBNq jPSKrv"
        >
          hoge
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-hIPBNq HfKJi"
        >
          fuga
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox candidateItems and selectedItems with inverse 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh iJcWMs"
  >
    <ul
      class="sc-jsEeTM hQaZnA"
    >
      <li
        class="sc-kFCroH sc-irLvIq bEWmyC dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              checked=""
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                foo
              </p>
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kFCroH sc-irLvIq bEWmyC dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              checked=""
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                bar
              </p>
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kFCroH sc-irLvIq bEWmyC dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              checked=""
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                hoge
              </p>
            </span>
          </label>
        </div>
      </li>
      <li
        class="sc-kFCroH sc-irLvIq dMFoFL dugRrS"
      >
        <div
          class="sc-dmyCSP ivdzlT"
          display="flex"
          justifycontent="space-between"
        >
          <label
            class="sc-hABBmJ jvahUa"
          >
            <input
              checked=""
              class="sc-ktwOfi eSdHTA"
              readonly=""
              type="checkbox"
            />
            <span
              class="sc-fmKFGs bQhYUU"
            >
              <p
                align="left"
                class="sc-fHejqy iHAJAy"
                color="#041C33"
                font-size="14px"
                lineheight="1.4"
                weight="normal"
              >
                fuga
              </p>
            </span>
          </label>
        </div>
      </li>
    </ul>
    <hr
      class="sc-fLseNd dUhxpB"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-blmEgr dnjMBb"
    >
      <div
        class="sc-ifyrAs fdWRu"
      >
        <p
          align="left"
          class="sc-fHejqy jScsaH"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-fHejqy hzmlXz"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            4 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-dJGMql"
      >
        <li
          class="sc-hIPBNq jPSKrv"
        >
          foo
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-hIPBNq jPSKrv"
        >
          bar
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-hIPBNq jPSKrv"
        >
          hoge
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-hIPBNq HfKJi"
        >
          fuga
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox component testing DualListBox selectedItems 1`] = `
<DocumentFragment>
  <div
    class="sc-beySPh iJcWMs"
  >
    <ul
      class="sc-jsEeTM hQaZnA"
    />
    <hr
      class="sc-fLseNd dUhxpB"
      color="#B3BAC1"
      orientation="vertical"
    />
    <div
      class="sc-blmEgr dnjMBb"
    >
      <div
        class="sc-ifyrAs fdWRu"
      >
        <p
          align="left"
          class="sc-fHejqy jScsaH"
          color="#041C33"
          font-size="13px"
          lineheight="1.4"
          weight="bold"
        >
          <span
            align="left"
            class="sc-fHejqy hzmlXz"
            color="#0B82F4"
            font-size="13px"
            lineheight="1.4"
            weight="bold"
          >
            4 
          </span>
          selected
        </p>
      </div>
      <ul
        class="sc-dJGMql"
      >
        <li
          class="sc-hIPBNq jPSKrv"
        >
          foo
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-hIPBNq jPSKrv"
        >
          bar
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-hIPBNq jPSKrv"
        >
          hoge
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
        <li
          class="sc-hIPBNq HfKJi"
        >
          fuga
          <div
            class="sc-khjJXk etXsGu"
          >
            <button
              class="sc-dmXWDj bglNgn"
              type="button"
            >
              <span
                class="sc-guDLey bkEHsQ"
                size="12"
              >
                <svg
                  fill="none"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1.45456 1.45449C2.25788 0.65117 3.5605 0.651339 4.36403 1.45487L8.0005 5.09135L11.6374 1.45446C12.4405 0.651345 13.7426 0.651345 14.5457 1.45446L14.5465 1.45522C15.3496 2.25833 15.3496 3.56044 14.5465 4.36356L10.9096 8.00044L14.5447 11.6356C15.3483 12.4391 15.3484 13.7417 14.5451 14.545C13.7418 15.3484 12.4392 15.3482 11.6356 14.5447L8.0005 10.9095L4.36427 14.5458C3.56116 15.3489 2.25905 15.3489 1.45593 14.5458L1.45518 14.545C0.652059 13.7419 0.652059 12.4398 1.45517 11.6367L5.09141 8.00044L1.45493 4.36397C0.6514 3.56043 0.651231 2.25782 1.45456 1.45449Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
